<resources>
    <string name="app_name">Waitless</string>

    <!--for textinputlayout-->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="error">Please enter at least 4 characters</string>

    <!-- Sign Up Page -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="telephone">Telephone</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="send_verified_email">Signup successfully. Verification email sent to activate your account!</string>
    <string name="empty_first_name">First Name is empty. Enter first name!</string>
    <string name="empty_last_name">Last Name is empty. Enter last name!</string>
    <string name="empty_phone">Phone is empty. Enter phone number!</string>

    <!-- Login Page -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="empty_password">Password is empty. Enter password!</string>
    <string name="empty_email">Email is empty. Enter email!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed. Check your email and password or sign up.</string>
    <string name="login_succeed">Login succeeded!</string>
    <string name="login_fail">Login failed. Please activate your account with the link sent to your email.</string>

    <!-- Reset Password Page -->
    <string name="forgot_password_lbl">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="enter_registered_email">Enter your registered email!</string>
    <string name="send_reset_instruction">We have sent you instructions to reset your password!</string>
    <string name="fail_reset">Failed to send reset email!</string>

    <!-- Home Fragment -->
    <string name="home">Home</string>
    <string name="SanFrancisco">San Francisco</string>
    <string name="hint">Search a Restaurant</string>
    <string name="Chinese">Chinese</string>
    <string name="Italian">Italian</string>
    <string name="Japanese">Japanese</string>
    <string name="American">American</string>
    <string name="Thai">Thai</string>
    <string name="restaurant">Restaurant</string>
    <string name="viewAll">View All</string>
    <string name="clickedSearchBar">Clicked Search Bar</string>
    <string name="hot_restaurant">Hot Restaurants</string>

    <!-- Search Page -->
    <string name="search">Search</string>
    <string name="hint_search">Type a restaurant or a cuisine</string>
    <string name="not_found">No restaurant found!</string>

    <!-- Restaurant Details Page -->
    <string name="restaurant_details">Restaurant Details</string>
    <string name="getNumber">Get a Number</string>
    <string name="open">Currently Open</string>
    <string name="close">Currently Close</string>
    <string name="tableSize">Table Size</string>
    <string name="waitingParty">Waiting Party</string>
    <string name="estimateTime">Estimate Time</string>
    <string name="tableA">1 – 2</string>
    <string name="tableB">3 – 4</string>
    <string name="tableC">5 – 6</string>
    <string name="tableD">7 – 10</string>
    <string name="menu">Menu</string>

    <!-- Get a Number Page -->
    <string name="partySize">Party Size</string>
    <string name="empty_party">Party size is empty. Enter party size!</string>
    <string name="confirm">Confirm</string>
    <string name="large_party">Party size is larger than 10. Please create multiple numbers separately!</string>

    <string name="congrats">Congrats! You got a number!</string>
    <string name="number">Number</string>
    <string name="customer">Customer</string>
    <string name="createdTime">Created Time</string>
    <string name="closeButton">Close</string>

    <!-- Nearby Fragment -->
    <string name="nearby">Nearby</string>

    <!-- Drawer -->
    <string name="profile">Profile</string>
    <string name="waitlist_history">Waitlist History</string>
    <!--<string name="favorite">Favorite Restaurants</string>-->
    <string name="sign_out">Sign Out</string>

    <!-- Profile Fragment -->
    <string name="avatar">Avatar</string>
    <string name="btn_save">Save</string>

    <!-- Waitlist History Fragment -->
    <string name="no_record">No history record</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>

    <!-- Number Detailed Activity -->
    <string name="number_details">Number Details</string>
    <string name="status">Status</string>
    <string name="cancel_message">Are you sure that you want to cancel the waitlist number?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_succeed">The number has been cancelled!</string>
    <string name="table_name">Table Name</string>
    <string name="delete">Delete</string>




</resources>
