<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGrey"
    android:padding="20dp">

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/congrats"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <TextView
        android:id="@+id/restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant" />

    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerName" />

    <TextView
        android:id="@+id/customerTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone" />

    <TextView
        android:id="@+id/customerPartyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partyNumber" />

    <TextView
        android:id="@+id/numberCreatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createdTime" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/closeButton" />

</LinearLayout>