<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24px"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24px"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24px"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>