<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/getNumberLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/telephone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/telephone"
        android:maxLength="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/partyNumber"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/partyNumber"
        android:inputType="number" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:text="@string/confirm" />
</LinearLayout>