<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingBottom="3dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/searchLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/searchImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_black_24px"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/searchBarEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.8"
            android:maxLines="1"
            android:hint="@string/hint_search"
            android:textSize="16sp"
            android:inputType="textNoSuggestions"/>

        <Button
            android:id="@+id/searchButton"
            android:text="@string/search"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/restaurantList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/noResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>