<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/waitlistInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:contentDescription="@string/restaurant"
                    android:src="@drawable/ic_store_mall_directory_black_24px" />

                <TextView
                    android:id="@+id/restaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingStart="10dp"
                    android:text="@string/restaurant"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/numberName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="12dp"
                    android:paddingEnd="10dp"
                    android:text="@string/number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/partyNumber"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_face_black_24px" />

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingStart="10dp"
                    android:text="@string/customer" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="12dp"
                    android:paddingEnd="10dp"
                    android:text="@string/status"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/partyNumber"
                    android:paddingTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_date_range_black_24px" />

                <TextView
                    android:id="@+id/numberCreatedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/createdTime" />
            </LinearLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>